[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/HUD.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Symtext.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/BasketballScore.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="BasketballScore" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 100 )
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 4 )

[node name="ScoreBoard" type="VBoxContainer" parent="BasketballScore"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -47.0
margin_top = -22.0
margin_right = -1.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 1

[node name="TimerLabel" type="Label" parent="BasketballScore/ScoreBoard"]
margin_right = 46.0
margin_bottom = 19.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.741176, 0.0862745, 0.109804, 1 )
custom_fonts/font = SubResource( 1 )
text = "20.00"
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="BasketballScore/ScoreBoard"]
margin_top = 20.0
margin_right = 46.0
margin_bottom = 44.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.87451, 0.580392, 0.0901961, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
